# ms21xx-firmware

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: python-publish.yml
ms21xx_firmware/: generate.py
