[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "ms21xx-firmware"
version = "1.0.0"
dependencies = []
requires-python = ">=3"
authors = [{ name = "Pradish Bijukchhe", email = "pradish@sandbox.com.np" }]
description = "Tool to generate ms21xx firmware with custom VID, PID, EDID, descriptors and serial number"
readme = "README.md"
license = { file = "LICENSE" }
keywords = []
classifiers = ["Programming Language :: Python :: 3"]

[project.urls]
Homepage = "https://github.com/sandbox-pokhara/ms21xx-firmware"
Issues = "https://github.com/sandbox-pokhara/ms21xx-firmware/issues"

[project.scripts]
ms21xx-firmware = "ms21xx_firmware.generate:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
"ms21xx_firmware" = "ms21xx_firmware"

[tool.isort]
line_length = 79
force_single_line = true

[tool.black]
line-length = 79
preview = true

[tool.pyright]
typeCheckingMode = "strict"
